// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<DocumentFragment>
  <div
    class="sc-542484ec-0 gIBsHZ"
  >
    <div
      class="sc-542484ec-1 bYjvwR"
      width="150"
    />
    <button
      class="sc-542484ec-2 bVowdC"
      color="var(--text)"
      font-size="24"
      height="50"
      width="150"
    >
      <div
        class="sc-542484ec-3 lkLZog"
      >
        <div
          class="sc-542484ec-5 emPCMI"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render in loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-542484ec-0 gIBsHZ"
  >
    <div
      class="sc-542484ec-1 hXtdfN loading"
    />
    <button
      class="sc-542484ec-2 dVEcQH loading"
      color="var(--text)"
      disabled=""
      font-size="24"
    >
      <div
        class="sc-542484ec-3 lkLZog"
      >
        <div
          class="sc-542484ec-4 dCgaOQ loading"
        >
          <div
            class="sc-b46874d8-0 iNvNpZ loader"
            color="var(--text)"
          />
        </div>
        <div
          class="sc-542484ec-5 emPCMI loading"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render with custom props 1`] = `
<DocumentFragment>
  <div
    class="sc-542484ec-0 gIBsHZ"
  >
    <div
      class="sc-542484ec-1 jxFbmT"
    />
    <button
      class="sc-542484ec-2 kOBscr"
      color="red"
      font-size="12"
    >
      <div
        class="sc-542484ec-3 lkLZog"
      >
        <div
          class="sc-542484ec-5 emPCMI"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
